    - Enable FUNCTION_TRACER and DYNAMIC_FTRACE
    - Enable FUNCTION_GRAPH_TRACER, FTRACE_SYSCALLS and STACK_TRACER 
      (except on armel/kirkwood)
  * [powerpc] drm: Disable DRM_RADEON_UMS, as radeon X driver now requires KMS
  * aio: fix reqs_available handling (regression in 3.14.10)
  * mm: Enable FRONTSWAP, ZSWAP (except armel/{ixp4xx,orion5x})
    (Closes: #725703)

  [ Vagrant Cascadian ]
  * [armmp] Enable IMX_IPUV3_CORE (closes: #756810).

  [ Aurelien Jarno ]
  * [mips*] Fix FP emulation for unaligned accesses.
  * Update Spanish debconf template translations (Matias A. Bellone)
    (Closes: #758591).
  * [mips*/loongson3] Backport Loongson 3B support from 3.17.

  [ Mauricio Faria de Oliveira ]
  * [ppc64el] debian/config/ppc64el/defines: switch to vmlinuz (from vmlinux).
  * [ppc64el] debian/patches/debian/ppc64el-disable-zImage.patch: remove patch.
    The 'powerpc/boot: 64bit little endian wrapper' patch-set is in linux 3.16.
    (Closes: #759389).

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 12 Aug 2014 02:58:45 +0100

linux (3.16-1~exp1) experimental; urgency=medium

  * New upstream release: http://kernelnewbies.org/Linux_3.16

  [ Aurelien Jarno ]
  * [x86] vfio: Enable VFIO_PCI_VGA.
  * udeb: rename crc32c.ko into crc32c_generic.ko in crc-modules.
  * [mips*] Fix FP emulation.
  * [mips*/loongson3] Enable TRANSPARENT_HUGEPAGE.

  [ Bastian Blank ]
  * [x86] Enable Xen PVH support.
  * Enable more Nftables modules.
  * [x86] Enable EARLY_PRINTK_EFI.
  * Enable stack protector on all supported architectures. (closes: #756898)
  * [powerpc64, s390x] Enable PCI hotplug.
  * Enable RTL8723BE.
  * Enable OPROFILE.
  * [ppc64] Enable 64KiB pages.

  [ Ben Hutchings ]
  * udeb: Add new sound drivers to sound-modules (thanks to Samuel Thibault)
    (Closes: #756998)
  * [armhf] touchscreen: Enable TOUCHSCREEN_SUN4I as module (Closes: #757086)
  * [!alpha,m68k,x86] Disable USELIB, only needed by libc5