@@ -2,10 +2,10 @@ From: Ben Hutchings <ben@decadent.org.uk>
 Subject: cirrus: Disable by default
 Forwarded: not-needed
 
-Current Debian userland is not compatible with this driver, so set
-modeset=0 by default (making module init fail).
-xserver-xorg-video-cirrus will need to override this once it is
-compatible, by installing a modprobe config file.
+This kernel driver is incompatible with older versions of
+xserver-xorg-video-cirrus, so do not enable it by default.  It will be
+enabled by a modprobe configuration file installed by
+xserver-xorg-video-modesetting.
 
 --- a/drivers/gpu/drm/cirrus/cirrus_drv.c
 +++ b/drivers/gpu/drm/cirrus/cirrus_drv.c
