@@ -4,18 +4,18 @@ Date: Mon, 24 Dec 2012 00:10:05 +0000
 Forwarded: not-needed
 
 This kernel driver is incompatible with older versions of
-xserver-xorg-video-mga, so do not autoload it yet.  It will have to be
-loaded either by local configuration or as part of a package of a
-compatible X driver.
+xserver-xorg-video-mga, so do not enable it by default.  It will be
+enabled by a modprobe configuration file installed by
+xserver-xorg-video-modesetting.
 
 --- a/drivers/gpu/drm/mgag200/mgag200_drv.c
 +++ b/drivers/gpu/drm/mgag200/mgag200_drv.c
-@@ -38,7 +38,7 @@ static DEFINE_PCI_DEVICE_TABLE(pciidlist
- 	{0,}
- };
+@@ -21,7 +21,7 @@
+  * which then performs further device association and calls our graphics init
+  * functions
+  */
+-int mgag200_modeset = -1;
++int mgag200_modeset = 0;
  
--MODULE_DEVICE_TABLE(pci, pciidlist);
-+/*MODULE_DEVICE_TABLE(pci, pciidlist);*/
- 
- static void mgag200_kick_out_firmware_fb(struct pci_dev *pdev)
- {
+ MODULE_PARM_DESC(modeset, "Disable/Enable modesetting");
+ module_param_named(modeset, mgag200_modeset, int, 0400);
