@@ -15,6 +15,8 @@ linux (3.16.1-1) UNRELEASED; urgency=medium
   * aio: fix reqs_available handling (regression in 3.14.10)
   * mm: Enable FRONTSWAP, ZSWAP (except armel/{ixp4xx,orion5x})
     (Closes: #725703)
+  * [x86] mgag200: Enable auto-loading, but require mode-setting to be
+    explicitly enabled (as xserver-xorg-video-modesetting does)
 
   [ Vagrant Cascadian ]
   * [armmp] Enable IMX_IPUV3_CORE (closes: #756810).
